<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_congrats_bg" >

    <RelativeLayout style="@style/LRSLayout" >
        
        <TextView style="@style/PCSGood" 
            android:text="@string/pcs_good"
            android:id="@+id/pcs_good"
            />
            
        <TextView style="@style/PCSGoodSec"
            android:layout_below="@+id/pcs_good" 
            android:text="@string/pcs_good_next2"
            android:id="@+id/pcs_good_next2"
            />

        <TextView style="@style/PCSGoodSec"
            android:layout_below="@+id/pcs_good_next2" 
            android:text="@string/pcs_good_next3"
            android:id="@+id/pcs_good_next3"
            />
        
        <!-- Seperator -->
        <TextView style="@style/PCSSep"
            android:layout_below="@+id/pcs_good_next3"
            android:id="@+id/pcs_good_sep"
            />
        
        <TextView style="@style/LRSUniq" 
            android:layout_below="@+id/pcs_good_sep"
            android:text="@string/pcs_important"
            android:layout_marginTop="@dimen/pcs_desc_pad_20dp"
            android:id="@+id/pcs_important"
            />
        
        <TextView style="@style/LRSDesc"
            android:layout_below="@+id/pcs_important" 
            android:layout_marginTop="1dp"
            android:text="@string/pcs_desc_first"
            android:id="@+id/pcs_desc_first"
            />
        
        <TextView style="@style/LRSDesc"
            android:layout_below="@+id/pcs_desc_first" 
            android:layout_marginTop="@dimen/pcs_desc_pad_20dp"
            android:text="@string/pcs_desc_second"
            android:id="@+id/pcs_desc_second"
            />
        
        <TextView style="@style/LRSPintact" 
            android:layout_below="@+id/pcs_desc_second"
            android:text="@string/pcs_desc_last"
            android:textSize="@dimen/lrs_text_size_15sp"
            android:layout_marginTop="@dimen/pcs_desc_pad_20dp"
            />
        
        
        
   	</RelativeLayout>
    
    <TextView style="@style/LRSProfile"
        android:text="@string/lr_text_next"
        android:id="@+id/pcs_next"
        />
    
</RelativeLayout>
