<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/group_profile_view"
    android:background="@color/login_congrats_bg" >
    
    <TextView style="@style/LRPinText"
        android:id="@+id/gps_pin_tv"
        android:layout_marginBottom="@dimen/login_btn_margin_top"
        android:text="@string/gm_select_profile"
        />
    
    <HorizontalScrollView
        android:id="@+id/ps_scroll"
        android:layout_below="@+id/gps_pin_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        
        <LinearLayout
            android:id="@+id/ps_share_lo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal" >
            
       	</LinearLayout>
        
    </HorizontalScrollView>
    
    <TextView style="@style/LRPinText"
        android:id="@+id/gps_msg_title"
        android:layout_below="@+id/ps_scroll"
        android:text="@string/gm_msg_title"
        />
    
    <EditText style="@style/LFEmail"
        android:id="@+id/gps_msg_cont"
        android:layout_below="@+id/gps_msg_title"
        android:layout_marginBottom="@dimen/login_btn_margin_top"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="@dimen/im_margin_60dp"
        android:layout_marginRight="@dimen/im_margin_60dp"
        android:lines="4"
        android:inputType="textMultiLine"
        android:gravity="top|left"
        android:maxLines="10"
        android:scrollbars="vertical"
        android:text="@string/gm_msg_hint"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/gps_msg_cont"
        android:layout_alignRight="@+id/gps_msg_cont"
        android:layout_below="@+id/gps_msg_cont"
        android:orientation="horizontal"
        >
    
	    <TextView style="@style/GMSend"
	        android:text="@string/gm_preview"
	        android:id="@+id/gm_preview" 
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        />    
	
	    <TextView style="@style/GMSend"
	        android:text="@string/gm_share"
	        android:id="@+id/gm_share" 
	        android:layout_marginLeft="20dp"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        />
    
    </LinearLayout>    
    	
</RelativeLayout>
